--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-Baekjoon/p13460.
+Baekjoon/p13460.py
 Baekjoon/p14502.py
+Baekjoon/p1011.py
 SWEA/D4_1249.py
 Programmers/programmers_42584.py
 Programmers/programmers_138476.py
