--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Baekjoon/p13460.py
 Baekjoon/p14502.py
 Baekjoon/p1011.py
+Baekjoon/p1463.py
 SWEA/D4_1249.py
 Programmers/programmers_42584.py
 Programmers/programmers_138476.py
