--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ Baekjoon/p13460.py
 Baekjoon/p14502.py
 Baekjoon/p1011.py
 Baekjoon/p1463.py
+Baekjoon/p1107.py
+Baekjoon/p1780.py
 SWEA/D4_1249.py
 Programmers/programmers_42584.py
 Programmers/programmers_138476.py
